[project]
name = "servlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.0",
    "fastapi[standard]>=0.115.6",
    "jupyterlab>=4.3.4",
    "pytest>=8.3.4",
    "timm>=1.0.13",
    "torch>=2.5.1",
    "transformers>=4.48.0",
]